fix pdf layout issue

--- a/modules/openlmis-web/src/main/webapp/public/less/rnr-mmia-view.less
+++ b/modules/openlmis-web/src/main/webapp/public/less/rnr-mmia-view.less
@@ -104,8 +104,7 @@
   }
 
   .middle-section {
-    display: flex;
-    .regime-section {
+    display: -webkit-inline-box;
       .regime-form {
         thead {
           background-color: #f0f0f0;
@@ -124,7 +123,6 @@
         background-color: #cdd4dd;
         text-align: right;
       }
-    }
 
     .patient-section {
       flex: 1;
